	new woodland village.
	* data/items.xml: Tweaked description and values of the scythe.

2007-08-05  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/woodland_indoor.png,
	data/graphics/tiles/woodland_indoor_x2.png,
	data/graphics/tiles/woodland_indoor_x3.png: Added woodland
	village indoor tilesets.
	* data/maps/new_20-1.tmx.gz: Added woodland village indoor map.

2007-07-25  Joshua Langley  <joshlangley[at]optusnet.com.au>

	* src/gui/setup.cpp, src/gui/setup_keyboard.cpp,
	src/gui/setup_keyboard.h, src/keyboardconfig.cpp,
	src/keyboardconfig.h, src/main.cpp: Minor changes to keyboard config,
	keyboard setup gui re-designed.

2007-07-24  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/CMakeLists.txt, src/Makefile.am: Added setup_keyboard.* and
	keyboardconfig.* to the list of source files.
	* src/keyboardconfig.h: Fixed initialization order.

2007-07-17  Joshua Langley  <joshlangley[at]optusnet.com.au>

	* src/game.cpp: Only one key per function.
	* src/main.cpp: Keyboard configuration included.
	* src/gui/button.cpp, src/gui/button.h: Default constructor and
	init function added.
	* src/gui/setup.cpp: Keyboard setup tab added.
	* src/gui/setup_keyboard.cpp, src/gui/setup_keyboard.h: Add to project
	file, it is the keyboard setup tab.
	* src/keyboardconfig.cpp, src/keyboardconfig.h: Add to project file,
	the main keyboard config operations.

2007-07-16  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/items.xml: Fixed description of silk headband.

2007-07-11  Philipp Sehmisch  <tmw@crushnet.org>

	* src/resources/monsterdb.cpp, src/resources/monsterinfo.cpp,
	src/resources/monsterinfo.h, src/monster.cpp: Renamed SoundEvent
	to MonsterSoundEvent.
	* src/resources/equipmentdb.cpp, src/resources/equipmentinfo.cpp,
	src/resources/equipmentinfo.h: EquipmentDB now holds the type of
	attack animation and the sounds of weapons.
	* src/being.cpp. src/being.h, src/localplayer.cpp,
	src/net/beinghandler.cpp, src/net/charserverhandler.cpp,