@@ -35,6 +35,10 @@
 #include <iostream>
 #include <sstream>
 
+Logger::Logger():
+    mLogToStandardOut(false)
+{
+}
 
 Logger::~Logger()
 {
@@ -91,6 +95,11 @@ void Logger::log(const char *log_text, ...)
         << "] ";
 
     mLogFile << timeStr.str() << buf << std::endl;
+
+    if (mLogToStandardOut)
+    {
+        std::cout << timeStr.str() << buf << std::endl;
+    }
 
     // Delete temporary buffer
     delete[] buf;
