@@ -44,6 +44,7 @@ class Music : public Resource
          *
          * @param buffer     The memory buffer containing the music data.
          * @param bufferSize The size of the memory buffer in bytes.
+         * @param idPath     The path identifying the resource.
          *
          * @return <code>NULL</code> if the an error occurred, a valid pointer
          *         otherwise.
